# game-launcher

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
src/: CMakeLists.txt  main.c  settings.c  settings.h  splashscreen.h  splashscreen_common.c  splashscreen_common.h  splashscreen_win32.c  splashscreen_xcb.c  splashscreen_xlib.c
